docs/apache-airflow-providers-microsoft-azure/12.3.0/_sources/_api/airflow/providers/microsoft/azure/operators/msgraph/index.rst.txt
airflow.providers.microsoft.azure.operators.msgraph
===================================================

.. py:module:: airflow.providers.microsoft.azure.operators.msgraph


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.msgraph.MSGraphAsyncOperator


Functions
---------

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.msgraph.default_event_handler
   airflow.providers.microsoft.azure.operators.msgraph.execute_callable


Module Contents
---------------

.. py:function:: default_event_handler(event = None, **context)

.. py:function:: execute_callable(func, value, context, message)

.. py:class:: MSGraphAsyncOperator(*, url, response_type = None, path_parameters = None, url_template = None, method = 'GET', query_parameters = None, headers = None, data = None, conn_id = KiotaRequestAdapterHook.default_conn_name, key = XCOM_RETURN_KEY, timeout = None, proxies = None, scopes = None, api_version = None, pagination_function = None, result_processor = lambda result, **context: result, event_handler = None, serializer = ResponseSerializer, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`


   A Microsoft Graph API operator which allows you to execute REST call to the Microsoft Graph API.

   https://learn.microsoft.com/en-us/graph/use-the-api

       .. seealso::
           For more information on how to use this operator, take a look at the guide:
           :ref:`howto/operator:MSGraphAsyncOperator`

   :param url: The url being executed on the Microsoft Graph API (templated).
   :param response_type: The expected return type of the response as a string. Possible value are: `bytes`,
       `str`, `int`, `float`, `bool` and `datetime` (default is None).
   :param method: The HTTP method being used to do the REST call (default is GET).
   :param conn_id: The HTTP Connection ID to run the operator against (templated).
   :param key: The key that will be used to store `XCom's` ("return_value" is default).
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter` (default is None).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param scopes: The scopes to be used (default is ["https://graph.microsoft.com/.default"]).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.
   :param result_processor: Function to further process the response from MS Graph API
       (default is lambda: response, context: response).  When the response returned by the
       `KiotaRequestAdapterHook` are bytes, then those will be base64 encoded into a string.
   :param event_handler: Function to process the event returned from `MSGraphTrigger`.  By default, when the
       event returned by the `MSGraphTrigger` has a failed status, an AirflowException is being raised with
       the message from the event, otherwise the response from the event payload is returned.
   :param serializer: Class which handles response serialization (default is ResponseSerializer).
       Bytes will be base64 encoded into a string, so it can be stored as an XCom.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('url', 'response_type', 'path_parameters', 'url_template', 'query_parameters', 'headers',...



   .. py:attribute:: url


   .. py:attribute:: response_type
      :value: None



   .. py:attribute:: path_parameters
      :value: None



   .. py:attribute:: url_template
      :value: None



   .. py:attribute:: method
      :value: 'GET'



   .. py:attribute:: query_parameters
      :value: None



   .. py:attribute:: headers
      :value: None



   .. py:attribute:: data
      :value: None



   .. py:attribute:: conn_id
      :value: 'msgraph_default'



   .. py:attribute:: key
      :value: 'return_value'



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: proxies
      :value: None



   .. py:attribute:: scopes
      :value: None



   .. py:attribute:: api_version
      :value: None



   .. py:attribute:: pagination_function


   .. py:attribute:: result_processor


   .. py:attribute:: event_handler


   .. py:attribute:: serializer
      :type:  airflow.providers.microsoft.azure.triggers.msgraph.ResponseSerializer


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)

      Execute callback when MSGraphTrigger finishes execution.

      This method gets executed automatically when MSGraphTrigger completes its execution.



   .. py:method:: append_result(results, result, append_result_as_list_if_absent = False)
      :classmethod:



   .. py:method:: pull_xcom(context)


   .. py:method:: push_xcom(context, value)


   .. py:method:: paginate(operator, response, **context)
      :staticmethod:



   .. py:method:: trigger_next_link(response, method_name, context)


